# Mezmer-Clipboard-Manager-Private

./: .gitignore  README.md  clipboard_manager.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
release-public/: README.md
scripts/: PUBLISH-PUBLIC-RELEASE.md  clean-public-repo.ps1  prepare-app-icon.ps1  prepare-public-release.ps1  publish-all.ps1  publish-github-release.ps1  push-repos.ps1
src/: App.tsx  EyedropperApp.tsx  SettingsApp.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: autostart.rs  capture_protection.rs  clipboard.rs  commands.rs  db.rs  eyedropper.rs  gifs.rs  hotkey.rs  lib.rs  main.rs  mezmer.rs  paths.rs  screen.rs  settings.rs  window_anchor.rs
src/components/: AppLogo.tsx  ClipCarousel.tsx  ClipFilterTabs.tsx  ClipItem.tsx  ClipboardEmpty.tsx  ColorCarousel.tsx  ColorField.tsx  ColorsPanel.tsx  EmojiPanel.tsx  GifPanel.tsx  HotkeyField.tsx  NavKeyFields.tsx  PickerMainContent.tsx  SaveToMezmerModal.tsx  SettingsAbout.tsx  SettingsContent.tsx  SettingsGeneral.tsx  SettingsPersonalization.tsx  SettingsTabs.tsx  Toast.tsx  Toggle.tsx  icons.tsx
src/hooks/: useAppTheme.ts  useClipThumb.ts  usePinnedDeleteConfirm.ts
src/lib/: api.ts  clipFilter.ts  constants.ts  emojiData.ts  hotkey.ts  imageCache.ts  mezmer.ts  navKey.ts  platform.ts  store.ts  theme.ts  types.ts  windowDrag.ts
src/styles/: ui-themes.css
