[package]
name = "mesmer-clipboard-manager"
version = "0.2.0"
description = "Local-first clipboard manager with optional Mezmer pairing"
authors = ["you"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "mesmer_clipboard_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
arboard = "3"
blake3 = "1"
image = { version = "0.25", features = ["jpeg", "png"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clipboard-win = "5"
base64 = "0.22"
tauri-plugin-opener = "2"
ureq = { version = "2", default-features = false, features = ["json", "tls"] }
urlencoding = "2"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_System_Threading",
  "Win32_UI_WindowsAndMessaging",
] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
